# siyarix

./: .dockerignore  .env.example  .gitignore  .graphifyignore  .mypy.ini  .pre-commit-config.yaml  .secrets.baseline  .trivyignore  .typos.toml  .vulture_whitelist.py  AI_PROVIDER_POLICY.md  ARCHITECTURE_ANALYSIS.md  BRAND_POLICY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEEP_TECHNICAL_AUDIT.md  DISCLAIMER.md  Dockerfile  ETHICAL_USE.md  GOVERNANCE.md  IMPLEMENTATION_ROADMAP.md  LEGAL_AUDIT_REPORT.md  LICENSE  LICENSE_SUMMARY.md  LICENSE_VALIDATION_REPORT.md  MIGRATION_PLAN.md  Makefile  NOTICE  README.md  REBRANDING_AUDIT_REPORT.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.0.0.md  RESPONSIBLE_AI_USE.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_LICENSES.md  TRADEMARK_POLICY.md  (+13 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: ai-code-comments.yml  ai-comments-advanced.yml  api-breaking-change.yml  attestations.yml  auto-format.yml  auto-merge.yml  benchmark.yml  build-packages.yml  changelog-enforcement.yml  changelog.yml  chaos.yml  ci.yml  codeql-weekly.yml  codeql.yml  compatibility.yml  container-scan.yml  coverage.yml  dead-code.yml  dependencies.yml  dependency-review.yml  dependency-vulnerability-fix.yml  docker-publish.yml  docs.yml  downstream-compatibility.yml  flaky-test-detection.yml  fuzzing.yml  greetings.yml  homebrew-publish.yml  iac-validation.yml  issue-manager.yml  labeler.yml  license-check.yml  link-checker.yml  lock-threads.yml  maintenance.yml  package-size-history.yml  pr-title.yml  pre-commit.yml  publish.yml  release-drafter.yml  (+19 more)
announcement/: repo-migration-announcement.md
docs/: DOCS_MAP.md  architecture.md  cli-reference.md  contributing.md  development.md  extending.md  faq.md  index.md  installation.md  models.md  overview.md  security.md  troubleshooting.md  usage.md
docs/ai/: agent-reasoning.md  mcp-integration.md  multi-model-ensemble.md  multi-provider-routing.md  multi-wave-execution.md  persona-system.md  prompt-architecture.md  safety-and-hallucination.md  tool-execution.md
docs/architecture/: ai-agent-pipeline.md  execution-engine.md  experience-intelligence.md  intent-routing.md  interaction-modes.md  memory-and-state.md  multi-agent-framework.md  overview.md  provider-abstraction.md  security-model.md
docs/deployment/: distributed-mode.md
docs/developer/: building.md  codebase-overview.md  contribution-guide.md  module-architecture.md  testing.md
docs/getting-started/: configuration.md  first-run.md  installation.md  onboarding.md  setup.md  troubleshooting.md
docs/legal/: agpl-license-guide.md  disclaimer.md  note-file-explained.md  notice-file-explained.md  plugin-exception.md  responsible-ai-usage.md  trademark-policy.md  why-agpl.md
docs/security/: abuse-prevention.md  ethical-hacking-policy.md  hsm-integration.md  operational-security.md  threat-model.md  vulnerability-reporting.md
docs/stylesheets/: extra.css
docs/testing-evidence/: defensive-testing-report.md
docs/user/: ai-workflows.md  cli-commands.md  cloud-scanning.md  compliance-frameworks.md  deception-and-canary-tokens.md  iac-scanning.md  importing-findings.md  interactive-chat.md  iot-scanning.md  mobile-scanning.md  offline-registry.md  playbooks.md  reporting.md  scheduled-scans.md  security-workflows.md  threat-intelligence.md  workflow-files.md
git-cliff/: CHANGELOG.md
installer/: install.ps1  install.sh
release_notes/: RELEASE_NOTES_v1.0.1.md
scripts/: ai-code-comments.py  clean_tools.py  generate_tool_metadata.py  prepare_wiki.py  test_cross_platform.sh  test_platform.py  tool_registry_cleanup.py  tool_registry_validation.py  verify_tools.py
src/cosmicsec_agent/: ai_planner.py  audit_log.py  auth.py  branding.py  config.py  credential_store.py  dynamic_resolver.py  executor.py  hybrid_engine.py  intent_parser.py  main.py  offline_store.py  (+7 more)
tests/: __init__.py  conftest.py  debug_parsers.py  pytest.ini  test___main__.py  test_achievement.py  test_adaptive_replan.py  test_adversarial_tester.py  test_agent_lifecycle.py  test_agentic_loop.py  test_agents_coordinator.py  test_agents_dfir.py  test_agents_soc.py  test_attack_graph.py  test_audit_chain.py  test_auth.py  test_auth_creds.py  test_autonomous_loop.py  test_blue_team_evaluation.py  test_bootstrap.py  test_branding.py  test_cache_manager.py  test_canary.py  test_chat.py  test_chat_engine.py  test_chat_handlers.py  test_chat_openai_compat.py  test_cli_main.py  test_cli_phase_ca2.py  test_cli_phase_ca8_ca9_ca10.py  test_cli_security_phase_ca1.py  test_cloud_scanner.py  test_coder_bridge.py  test_command_palette.py  test_command_profiles.py  test_compaction.py  test_compat_models.py  test_compliance_runner.py  test_config.py  test_config_panel.py  (+145 more)
wiki-staging/: Home.md  _Sidebar.md  ai-agent-reasoning.md  ai-multi-provider-routing.md  ai-persona-system.md  ai-prompt-architecture.md  ai-safety-and-hallucination.md  architecture-intent-routing.md  architecture-interaction-modes.md  architecture-memory-and-state.md  architecture-overview.md  architecture-security-model.md  developer-building.md  developer-codebase-overview.md  developer-contribution-guide.md  getting-started-configuration.md  getting-started-first-run.md  getting-started-installation.md  getting-started-onboarding.md  getting-started-setup.md  getting-started-troubleshooting.md  legal-agpl-license-guide.md  legal-disclaimer.md  legal-notice-file-explained.md  legal-plugin-exception.md  legal-responsible-ai-usage.md  legal-trademark-policy.md  legal-why-agpl.md  security-abuse-prevention.md  security-ethical-hacking-policy.md  security-hsm-integration.md  security-operational-security.md  security-scorecard.md  security-threat-model.md  security-vulnerability-reporting.md  user-cli-commands.md  user-compliance-frameworks.md  user-importing-findings.md  user-interactive-chat.md  user-iot-scanning.md  (+1 more)
(+590 files in other folders)
