# SPDX-License-Identifier: AGPL-3.0-or-later
[project]
name = "siyarix"
version = "1.0.0-beta"
description = "Siyarix — AI Cybersecurity Orchestration Agent"
description-content-type = "text/markdown"
readme = "README.md"
authors = [ { name = "MD MUFTHAKHERUL ISLAM MIRAZ", email = "130831166+mufthakherul@users.noreply.github.com" } ]
requires-python = ">=3.11"
urls = { "Homepage" = "https://github.com/mufthakherul/siyarix", "Repository" = "https://github.com/mufthakherul/siyarix.git", "Documentation" = "https://github.com/mufthakherul/siyarix", "Changelog" = "https://github.com/mufthakherul/siyarix/releases" }
license = { text = "AGPL-3.0-or-later" }
keywords = ["cybersecurity", "agent", "siyarix", "ai", "pentest", "automation", "nmap", "scanner", "autonomous", "orchestration"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: System :: Networking",
  "Topic :: System :: Systems Administration",
  "Typing :: Typed",
]
dependencies = [
  "typer>=0.12",
  "rich>=13",
  "prompt_toolkit>=3.0",

  "httpx>=0.27",
  "pydantic>=2.5",
  "keyring>=25.0",
  "cryptography>=42.0",
  "psutil>=5.9.0",
  "defusedxml>=0.7.1",
]

[project.optional-dependencies]
cli = [
  "typer>=0.12",
  "rich>=13",
  "prompt_toolkit>=3.0",
]
siem = [
  "httpx>=0.27",
]
autonomous = [
  "anthropic>=0.40.0",
  "google-generativeai>=0.8.0",
  "openai>=2.31.0",
]
openai = [
  "openai>=2.31.0",
]
gemini = [
  "google-generativeai>=0.8.0",
]
anthropic = [
  "anthropic>=0.40.0",
]
all = [
  "siyarix[cli,siem,autonomous]",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "openai>=2.31.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "build>=1.2",
  "twine>=5.0",
]

[project.scripts]
siyarix = "siyarix.main:app"

[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/siyarix"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
per-file-ignores = {"tests/*" = ["F841", "E741", "F401", "F821"]}

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
warn_unused_ignores = true
strict_optional = true


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
  "bootstrap: bootstrap lifecycle and startup tests",
  "cvss: CVSS scoring tests",
  "report: reporting engine tests",
  "stealth: stealth mode behavior tests",
  "terminal: terminal detection tests",
  "tool_installer: tool installer tests",
]
