# SPDX-License-Identifier: AGPL-3.0-or-later

[build-system]
build-backend = "hatchling.build"

requires = [
  "hatchling>=1.21.1",
]

[project]
name = "siyarix"
version = "1.0.0"
description = "Siyarix — AI Cybersecurity Orchestration Agent"
readme = "README.md"
keywords = [
  "agent",
  "ai",
  "automation",
  "autonomous",
  "cybersecurity",
  "nmap",
  "orchestration",
  "pentest",
  "scanner",
  "siyarix",
]
license = { text = "AGPL-3.0-or-later" }
authors = [
  { name = "MD MUFTHAKHERUL ISLAM MIRAZ", email = "130831166+mufthakherul@users.noreply.github.com" },
]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Natural Language :: English",
  "Operating System :: Android",
  "Operating System :: iOS",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows :: Windows 10",
  "Operating System :: Microsoft :: Windows :: Windows 11",
  "Operating System :: OS Independent",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: System :: Networking",
  "Topic :: System :: Operating System",
  "Topic :: System :: Systems Administration",
  "Typing :: Typed",
]
dependencies = [
  "cryptography>=46.0.6",
  "defusedxml>=0.7.1",
  "httpx>=0.27",
  "jinja2>=3.1",
  "keyring>=25",
  "prompt-toolkit>=3",

  "psutil>=5.9",
  "pydantic>=2.5",
  "pyyaml>=6",
  "rich>=13",
  "typer>=0.12",
]

optional-dependencies.all = [
  "siyarix[cli,siem,autonomous,api,security,mobile,windows]",
]
optional-dependencies.anthropic = [
  "anthropic>=0.40",
]
optional-dependencies.api = [
  "fastapi>=0.110",
  "pyjwt>=2.8",
  "uvicorn[standard]>=0.29",
]
optional-dependencies.autonomous = [
  "anthropic>=0.40",
  "google-generativeai>=0.8",
  "openai>=2.31",
]
optional-dependencies.cli = [
  "colorama>=0.4.6; sys_platform=='win32'",
  "prompt-toolkit>=3",
  "pywin32>=306; sys_platform=='win32'",
  "rich>=13",
  "textual>=0.50",
  "typer>=0.12",
]
optional-dependencies.dev = [
  "bandit>=1.7.9",
  "build>=1.2",
  "click>=8",
  "hypothesis>=6.100",
  "mypy>=1.10",
  "openai>=2.31",
  "pip-audit>=2.7",
  "pre-commit>=3.7",
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5",
  "respx>=0.21",
  "ruff>=0.5",
  "safety>=3.2",
  "siyarix[terminal]",
  "twine>=5",
]
optional-dependencies.gemini = [
  "google-generativeai>=0.8",
]
optional-dependencies.mobile = [
  "httpx>=0.27",
  "siyarix[terminal]",
]
optional-dependencies.openai = [
  "openai>=2.31",
]
optional-dependencies.security = [
  "bandit>=1.7.9",
  "pip-audit>=2.7",
  "safety>=3.2",
]
optional-dependencies.siem = [
  "httpx>=0.27",
]
optional-dependencies.terminal = [
  "colorama>=0.4.6; sys_platform=='win32'",
  "prompt-toolkit>=3",
  "pywin32>=306; sys_platform=='win32'",
  "rich>=13",
  "textual>=0.50",
]
optional-dependencies.windows = [
  "colorama>=0.4.6; sys_platform=='win32'",
  "pywin32>=306; sys_platform=='win32'",
  "siyarix[terminal]",
]
urls = { "Homepage" = "https://github.com/mufthakherul/siyarix", "Repository" = "https://github.com/mufthakherul/siyarix.git", "Documentation" = "https://github.com/mufthakherul/siyarix", "Changelog" = "https://github.com/mufthakherul/siyarix/releases" }
scripts.siyarix = "siyarix.cli:app"

[tool.hatch.build.targets.wheel]
packages = [
  "src/siyarix",
]

[tool.ruff]
target-version = "py311"

line-length = 100
format.docstring-code-format = true
lint.ignore = [
  "S603",
  "S607",
]
lint.per-file-ignores = { "tests/*" = [
  "E741",
  "E402",
  "F841",
  "F811",
  "F601",
  "E731",
], "scripts/*" = [
  "E402",
  "F401",
], ".vulture_whitelist.py" = [
  "F821",
] }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
  "bootstrap: bootstrap lifecycle and startup tests",
  "cvss: CVSS scoring tests",
  "report: reporting engine tests",
  "stealth: stealth mode behavior tests",
  "terminal: terminal detection tests",
  "tool_installer: tool installer tests",
  "e2e: end-to-end integration tests",
]

[tool.coverage.report]
fail_under = 70
show_missing = true
omit = [
  "tests/*",
  "*/migrations/*",
]

[tool.coverage.run]
source = [
  "src/siyarix",
]
branch = true

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = false
warn_unused_ignores = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
  "tests.*",
  "scripts.*",
]
ignore_errors = true

[tool.bandit]
exclude_dirs = [
  "tests",
  ".venv",
]
skips = [
  "B101",
  "B303",
  "B311",
  "B404",
  "B603",
  "B607",
]

[tool.vulture]
paths = [
  'src/siyarix',
  'tests',
  '.vulture_whitelist.py',
]
